--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.datasource.url=jdbc:sqlite:db/ark_a2.sqlite
 #spring.datasource.username=dbuser
 #spring.datasource.password=dbpass
