--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-server.port=8080
+loader.main=AppController
 
-spring.datasource.url=jdbc:sqlite:db/ark_a2.sqlite
-#spring.datasource.username=dbuser
-#spring.datasource.password=dbpass
-spring.datasource.driver-class-name=org.sqlite.JDBC
+server.port=8081
+
+logging.level.root=WARN
+logging.level.arma.ark.cartograph=DEBUG
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ark_stats
+spring.datasource.username=ark_stats
+spring.datasource.password=heat
+
+map.path=///c:/dev/arma/cartograph/map/
